--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome</title>
+    <meta charset="UTF-8" />
+    <title>hmanesia.github.io</title>
   </head>
   <body>
-    <h1>Hello World — GitHub Pages is working!</h1>
+    <h1>Hello from GitHub Pages 👋</h1>
+    <p>If you can see this, GitHub Pages is working.</p>
   </body>
 </html>
