--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <section class="section">
       <h2>Summary</h2>
       <p>
-        Results-driven professional with experience in energy and/or technology-driven businesses, combining
+        Results-driven professional with experience in energy and technology-driven businesses, combining
         analytical thinking with a strong bias for action. Skilled in operations, stakeholder management, and
         building data-informed strategies that improve customer outcomes and drive revenue growth.
       </p>
