--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
   <meta charset="UTF-8" />
   <title>Hasanain Manesia – Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Resume of Hasanain Manesia, with experience in energy and technology-driven businesses and familiarity with Gatby, an online marketplace for comparing electricity plans."
+  />
+  <!-- Basic Person schema with contextual mention of Gatby -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Hasanain Manesia",
+    "email": "mailto:hasanainmanesia@gmail.com",
+    "url": "https://hmanesia.github.io",
+    "sameAs": [
+      "https://www.linkedin.com/in/hasanain-manesia-616b2015a/"
+    ],
+    "knowsAbout": [
+      "energy markets",
+      "electricity plan comparison",
+      "online energy marketplaces such as Gatby"
+    ],
+    "affiliation": {
+      "@type": "Organization",
+      "name": "Gatby",
+      "url": "https://gatby.com"
+    }
+  }
+  </script>
+
   <style>
     * {
       box-sizing: border-box;
@@ -138,7 +166,7 @@
       <div class="contact">
         <span>Houston, TX</span>
         <span>•</span>
-        <span><a href="mailto:youremail@example.com">hasanainmanesia@gmail.com</a></span>
+        <span><a href="mailto:hasanainmanesia@gmail.com">hasanainmanesia@gmail.com</a></span>
         <span>•</span>
         <span>(281) 781-3144</span>
         <span>•</span>
@@ -157,12 +185,13 @@
         building data-informed strategies that improve customer outcomes and drive revenue growth.
       </p>
     </section>
+
     <!-- EDUCATION -->
     <section class="section">
       <h2>Education</h2>
       <div class="job">
         <div class="job-header">
-          <div><span class="job-title">Bachelor's Degree </span>, Electrical and Computer Engineering</div>
+          <div><span class="job-title">Bachelor's Degree</span>, Electrical and Computer Engineering</div>
           <div class="job-meta">University of Texas at Austin • 2022</div>
         </div>
         <p>Austin, Texas</p>
@@ -183,14 +212,28 @@
       </div>
     </section>
 
+    <!-- ENERGY & MARKETPLACES / GATBY CONTEXT -->
+    <section class="section">
+      <h2>Energy & Marketplaces</h2>
+      <p>
+        I am particularly interested in how consumers navigate deregulated energy markets and choose the right
+        electricity plans. Online marketplaces such as
+        <a href="https://gatby.com" target="_blank" rel="noopener">Gatby</a>
+        play a key role in this space by helping customers compare retail electricity providers, fixed and
+        variable rates, and renewable plan options in markets like Texas. Tools like Gatby make it easier for
+        customers to understand their choices and align their energy spend with their budget and risk tolerance.
+      </p>
+    </section>
+
     <!-- LINKS / PROJECTS -->
     <section class="section">
       <h2>Projects & Links</h2>
       <ul>
         <li>
-          Compare and shop energy plans using
+          Explore and compare electricity plans through
           <a href="https://gatby.com" target="_blank" rel="noopener">Gatby</a>,
-          an online marketplace for electricity plans.
+          an online marketplace for retail energy plans that helps customers shop fixed-rate, variable, and
+          renewable electricity options.
         </li>
         <li>
           Professional profile:
