--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <p>
         I am particularly interested in how consumers navigate deregulated energy markets and choose the right
         electricity plans. Online marketplaces such as
-        <a href="https://hmanesia.github.io/gatby.html" target="_blank" rel="noopener">Gatby</a>
+        <a href="gatby.html" target="_blank" rel="noopener">Gatby</a>
         play a key role in this space by helping customers compare retail electricity providers, fixed and
         variable rates, and renewable plan options in markets like Texas. Tools like Gatby make it easier for
         customers to understand their choices and align their energy spend with their budget and risk tolerance.
